--- a/css/styles.css
+++ b/css/styles.css
@@ -104,13 +104,19 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 8px;
+  padding: 40px;
   width: 528px;
   height: 581px;
-  background: #ffffff;
+  /* background: #ffffff; */
+  background: lightblue;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 .close-btn {
@@ -148,6 +154,156 @@ img {
   background: rgba(0, 0, 0, 0.2);
   transition: 0.5s;
 }
+
+.modal-title {
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+letter-spacing: 0.03em;
+margin-bottom: 12px;
+color: #212121;
+}
+
+.feedback {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: center;
+}
+
+.feedback-icon {
+  position: absolute;
+  top: 27px;
+  left: 12px;
+  fill: #212121;
+}
+
+.feedback-label {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  gap: 4px;
+
+  color: #757575;
+}
+
+.input {
+  background: transparent;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  width: 448px;
+  min-height: 40px;
+  padding: 11px;
+}
+
+.feedback-group {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+  flex-direction: column;
+}
+
+.privacy-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.feedback-checkbox {
+  display: flex;
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+/* align-items: center; */
+/* justify-content: baseline; */
+background: transparent;
+color: #757575;
+margin-right: auto;
+margin-left: auto;
+gap: 3px;
+}
+
+.feedback-checkbox-input {
+  display: block;
+}
+
+.check-icon {
+  /* position: absolute; */
+  /* left: 0; */
+  /* top: 0; */
+  display: none;
+  width: 16px;
+  height: 15px;
+}
+
+.feedback-checkbox-input:not(:checked) ~ .icon-wrap .uncheck-icon {
+  display: block;
+}
+
+.uncheck-icon {
+  /* position: absolute; */
+  display: none;
+}
+
+.feedback-checkbox-input:not(:checked) {
+  display: none;
+}
+.feedback-checkbox-input:checked ~ .check-icon {
+  display: block;
+}
+
+.icon-wrap {
+  display: flex;
+  align-items: center;
+}
+
+.feedback-link {
+  text-decoration: underline;
+  color: var(--main-color);
+  font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+display: flex;
+}
+
+.submit-btn {
+  color: var(--button-text-color);
+  background-color: var(--main-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  width: 200px;
+  height: 50px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+  background-color: #188ce8;
+}
+
 
 /* Шапка сайту */
 .header {
@@ -225,7 +381,6 @@ display: inline-block;
 position: absolute;
 bottom: 0;
 left: 0;
-z-index: 23;
 }
 
 .sitenav .link {
@@ -377,12 +532,12 @@ z-index: 23;
   border-radius: 4px;
   border: 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: #188ce8;
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 /* Секція особливості */
@@ -697,6 +852,98 @@ z-index: 23;
 .footer-soc-icon {
   display: block;
   fill: #ffffff;
+}
+
+.mailing {
+  display: flex;
+  flex-direction: column;
+}
+
+.mailing-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.mailing-form {
+  display: flex;
+  background: transparent;
+  gap: 12px;
+}
+
+.mailing-label {
+  
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  display: flex;
+}
+
+.mailing-input {
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  outline: none;
+  padding: 12px 13px;
+  min-width: 358px;
+  height: 50px;
+  color: #FFFFFF;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mailing-input:focus {
+  color: #FFFFFF;
+  outline: none;
+  border: 1px solid var(--main-color);
+  border-radius: 4px;
+}
+
+.mailing-input:hover {
+  border: 2px solid var(--main-color);
+  border-radius: 4px;
+}
+
+.mailing-btn {
+  color: var(--button-text-color);
+  background-color: var(--main-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  min-width: 200px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  height: 50px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.mailing-btn:hover,
+.mailing-btn:focus {
+  background-color: #188ce8;
+}
+
+.mailing-btn::after {
+  content: "";
+  display: block;
+  background: url(../images/sendicon.svg);
+  background-repeat: no-repeat;
+  width: 24px;
+  height: 24px;
 }
 
 /* Сторінка портфоліо 
