--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,6 @@ color: #212121;
 }
 
 .feedback {
-  position: relative;
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -183,7 +182,7 @@ color: #212121;
 }
 
 .feedback-label {
-  position: relative;
+  position: relative; 
   display: flex;
   flex-direction: column;
   font-weight: 400;
@@ -212,9 +211,9 @@ color: #212121;
 }
 
 .privacy-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  /* display: flex; */
+  /* align-items: center;
+  justify-content: center; */
   margin-bottom: 30px;
 }
 
@@ -239,36 +238,6 @@ gap: 3px;
   display: block;
 }
 
-.check-icon {
-  /* position: absolute; */
-  /* left: 0; */
-  /* top: 0; */
-  display: none;
-  width: 16px;
-  height: 15px;
-}
-
-.feedback-checkbox-input:not(:checked) ~ .icon-wrap .uncheck-icon {
-  display: block;
-}
-
-.uncheck-icon {
-  /* position: absolute; */
-  display: none;
-}
-
-.feedback-checkbox-input:not(:checked) {
-  display: none;
-}
-.feedback-checkbox-input:checked ~ .check-icon {
-  display: block;
-}
-
-.icon-wrap {
-  display: flex;
-  align-items: center;
-}
-
 .feedback-link {
   text-decoration: underline;
   color: var(--main-color);
@@ -276,6 +245,10 @@ gap: 3px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 display: flex;
+}
+
+.icon-wrap {
+  display: block;
 }
 
 .submit-btn {
