--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,7 @@ img {
   padding: 40px;
   width: 528px;
   height: 581px;
-  /* background: #ffffff; */
-  background: lightblue;
+  background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -136,6 +135,10 @@ img {
 .close-icon {
   fill: #000000;
   display: block;
+}
+
+.close-btn:hover .close-icon {
+  fill: var(--main-color);
 }
 
 .is-hidden {
@@ -176,7 +179,7 @@ color: #212121;
 
 .feedback-icon {
   position: absolute;
-  top: 27px;
+  top: 50%;
   left: 12px;
   fill: #212121;
 }
@@ -196,11 +199,39 @@ color: #212121;
 
 .input {
   background: transparent;
+  outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   width: 448px;
   min-height: 40px;
-  padding: 11px;
+  padding-top: 11px;
+  padding-right: 11px;
+  padding-bottom: 11px;
+  padding-left: 42px;
+}
+
+.input:hover {
+  border: 1px solid var(--main-color);
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.input:hover + .feedback-icon {
+  fill: var(--main-color);
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.input:focus {
+  border: 1px solid var(--main-color);
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.input:focus + .feedback-icon {
+  fill: var(--main-color);
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.comment-input {
+  padding-left: 11px;
 }
 
 .feedback-group {
@@ -211,7 +242,10 @@ color: #212121;
 }
 
 .privacy-wrap {
-  /* display: flex; */
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 425px;
   /* align-items: center;
   justify-content: center; */
   margin-bottom: 30px;
@@ -236,6 +270,9 @@ gap: 3px;
 
 .feedback-checkbox-input {
   display: block;
+  opacity: 0;
+  height: 0;
+  width: 0;
 }
 
 .feedback-link {
@@ -247,8 +284,30 @@ letter-spacing: 0.03em;
 display: flex;
 }
 
-.icon-wrap {
+.check-icon {
+  position: absolute;
+  top: 4px;
+  left: 0;
+  height: 15px;
+  display: none;
+}
+
+.uncheck-icon {
+  position: absolute;
+  top: 4px;
+  left: 0;
+  height: 15px;
+  display: none;
+}
+
+.privacy-wrap .feedback-checkbox-input:not(:checked) ~ .uncheck-icon {
   display: block;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.privacy-wrap .feedback-checkbox-input:checked ~ .check-icon {
+  display: block;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .submit-btn {
@@ -405,10 +464,6 @@ left: 0;
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
-}
-
-.footer-content {
-  flex-direction: column;
 }
 
 .footer-content > .logo {
@@ -744,8 +799,9 @@ left: 0;
 .footer-content {
   display: flex;
   flex-direction: row;
-  gap: 94px;
+  gap: 93px;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .adress-wrapper > .logo {
@@ -851,18 +907,17 @@ left: 0;
 }
 
 .mailing-label {
-  
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
   display: flex;
+  outline: none;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .mailing-input {
   background: transparent;
-  border: none;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: none;
   outline: none;
+  border-radius: 4px;
   padding: 12px 13px;
   min-width: 358px;
   height: 50px;
@@ -878,7 +933,7 @@ left: 0;
 }
 
 .mailing-input:hover {
-  border: 2px solid var(--main-color);
+  border: 1px solid var(--main-color);
   border-radius: 4px;
 }
 
@@ -1016,7 +1071,7 @@ left: 0;
 
 .card-item-wrap {
   position: absolute;
-  bottom: 0%;
+  bottom: -0.1%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -1038,4 +1093,50 @@ left: 0;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
+}
+
+
+.recall {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-color);
+}
+
+.recall-wrap {
+  position: absolute;
+  top: 25%;
+  right: 25%;
+  left: 25%;
+  display: flex;
+  /* max-width: 1200px; */
+  /* height: 100vh; */
+  /* margin-right: auto; */
+  /* margin-left: auto; */
+  padding-top: 320px;
+  flex-direction: column;
+  text-align: center;
+  align-content: center;
+  border-style: inset;
+  border: 1px solid var(--main-color);
+}
+
+.recall-title {
+  font-family: var(--main-font-family);
+  color: #ffffff;
+  font-size: 75px;
+  line-height: 1.5;
+}
+
+.recall-text {
+  font-family: var(--main-font-family);
+  color: #ffffff;
+  font-size: 30px;
+}
+
+.phonebooth {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
 }
