--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ img {
   justify-content: center;
   align-content: center;
   align-items: center;
+  z-index: 15;
 }
 
 .close-btn {
@@ -130,6 +131,7 @@ img {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  z-index: 14;
 }
 
 .close-icon {
@@ -182,6 +184,7 @@ color: #212121;
   top: 50%;
   left: 12px;
   fill: #212121;
+  z-index: 13;
 }
 
 .feedback-label {
@@ -193,7 +196,7 @@ color: #212121;
   line-height: 1.17;
   letter-spacing: 0.01em;
   gap: 4px;
-
+  z-index: 12;
   color: #757575;
 }
 
@@ -246,9 +249,8 @@ color: #212121;
   display: flex;
   flex-direction: column;
   width: 425px;
-  /* align-items: center;
-  justify-content: center; */
   margin-bottom: 30px;
+  z-index: 10;
 }
 
 .feedback-checkbox {
@@ -290,6 +292,7 @@ display: flex;
   left: 0;
   height: 15px;
   display: none;
+  z-index: 11;
 }
 
 .uncheck-icon {
@@ -298,6 +301,7 @@ display: flex;
   left: 0;
   height: 15px;
   display: none;
+  z-index: 11;
 }
 
 .privacy-wrap .feedback-checkbox-input:not(:checked) ~ .uncheck-icon {
@@ -348,11 +352,11 @@ display: flex;
 .header-line {
   position: absolute;
   bottom: 0;
-  
+  transform: translateX(-13.5%);
   width: 1600px;
   height: 0;
   border-bottom: 1px solid #ececec;
-  z-index: 22;
+  z-index: 4;
 }
 
 /* Логотип */
@@ -613,7 +617,9 @@ left: 0;
 /* Секція послуги */
 
 .services {
+  position: relative;
   padding-top: 0;
+  z-index: 3;
 }
 
 .services > .container {
@@ -643,6 +649,7 @@ left: 0;
   align-items: center;
   justify-content: center;
   background: rgba(47, 48, 58, 0.8);
+  z-index: 3;
 }
 
 .item-text {
